Update 1. Introduction to MNG LFS.md

--- a/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
+++ b/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
@@ -82,10 +82,10 @@ As of the time of writing (July 2023) Mongolia is composed of 21 administrative 
 
 
 ### Employment: Industry Classification
-The Mongolia LFS questionnaires indicate the use of International Standards for Industrial Classification (ISIC) for industry codes, but they don't specify the exact ISIC version. We determine the ISIC version by looking at how often they match. From 2002 to 2006, the industry codes match most frequently with ISIC version 3.1, while the rounds from 2007 and onwards more often match with ISIC version 4. Beginning the 2011 round, the industry codes are left missing for individuals employed in animal husbandry. In such instances, we assign the relevant code corresponding to this specific economic activity. 
+The Mongolia LFS questionnaires indicate the use of International Standards for Industrial Classification (ISIC) to identify industry of employment, but the exact ISIC version is not specified. We determine the ISIC version by looking at how often they match. From 2002 to 2006, the industry codes match most frequently with ISIC version 3.1, while the rounds from 2007 and onwards more often match with ISIC version 4. Beginning the 2011 round, the industry codes are left missing for individuals employed in animal husbandry. In such instances, we assign the relevant code corresponding to this specific economic activity. 
 
 ### Employment: Occupation Classification
-The Mongolia LFS questionnaires suggest that they use the International Standards for Classification of Occupations (ISCO) for occupational codes, but the exact ISCO version is not specified. We identify the ISCO version based on frequency of matches. From 2002 to 2010, the occupation codes most often align with ISCO 1988. However, from 2011 onwards, the codes correlate more closely with ISCO 2008. Some mismatches occur, found in an earlier ISCO version, and some codes do not fit any ISCO versions. This issue is present in all rounds that seem to use ISCO 2008 but is especially noticeable in the 2011 round. We believe this may be due to a transition period between the two ISCO versions. To address this, we have opted to use only the first two digits of the codes for this round.
+The Mongolia LFS questionnaires suggest that the use of International Standards for Classification of Occupations (ISCO) to identify occupations, but the exact ISCO version is not specified. We identify the ISCO version based on frequency of matches. From 2002 to 2010, the occupation codes most often align with ISCO 1988. However, from 2011 onwards, the codes correlate more closely with ISCO 2008. Some mismatches occur, found in an earlier ISCO version, and some codes do not fit any ISCO versions. This issue is present in all rounds that seem to use ISCO 2008 but is especially noticeable in the 2011 round. We believe this may be due to a transition period between the two ISCO versions. To address this, we have opted to use only the first two digits of the codes for this round.
 
 
 
