--- a/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
+++ b/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
@@ -87,6 +87,6 @@ The Mongolia LFS questionnaires indicate the use of International Standards for 
 ### Employment: Occupation Classification
 The Mongolia LFS questionnaires suggest that the use of International Standards for Classification of Occupations (ISCO) to identify occupations, but the exact ISCO version is not specified. We identify the ISCO version based on frequency of matches. From 2002 to 2010, the occupation codes most often align with ISCO 1988. However, from 2011 onwards, the codes correlate more closely with ISCO 2008. Some mismatches occur, found in an earlier ISCO version, and some codes do not fit any ISCO versions. This issue is present in all rounds that seem to use ISCO 2008 but is especially noticeable in the 2011 round. We believe this may be due to a transition period between the two ISCO versions. To address this, we have opted to use only the first two digits of the codes for this round.
 
-
-
+### Mappings between raw and harmonized variables
+The mappings between the raw and harmonized variables can be found [here](Utilities/mappings_year_data.xls) for the following categorical variables: education, employment status, marital status, reasons for migration, reasons for non-participation in the labor force, sector of occupation, and relationship to household head.
 
