--- a/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
+++ b/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
@@ -67,7 +67,12 @@ In short, the ICLS 19 resolution restricts employment to *work performed for oth
 The GLD codes the harmonization’s `lstatus` variable based on the concept used in the survey. In the case of the Monoglia LFS this change occurs in 2019, when the survey switches to new definition. This implies that estimates for 2019 onwards may not be directly comparable with those from the previous years. However, it is possible to recode `lstatus` such that it matches the previous definition. The precise details are covered in a [separate document here](Converting%20between%20ICLS%20Definitions.md)
 
 ### Household ID
-The datasets provided in the GLD project initially lack ID information. To enhance the user experience, we've created identifiers using geographical references. The household ID is typically derived from data concerning the primary sampling unit and the household identification number. However, during the 2011 and 2012 rounds, some exceptions required us to construct the household ID using the interview date and time, as the combination of PSU and SSU data didn't precisely identify households. For the 2013 round, we made an effort to incorporate additional household data, such as the number of household visits and individuals absent from households. However, this approach did not fully result in the desired uniqueness of the IDs, and the survey is left with a few duplicate IDs with each having unique individual characteristics.
+The datasets provided in the GLD project initially lack ID information. To enhance the user experience, we've created identifiers using geographical references. The household ID is typically derived from data concerning the primary sampling unit and the household identification number. 
+
+However, during the 2011 and 2012 rounds, some exceptions required us to construct the household ID using the interview date and time, as the combination of PSU and SSU data didn't precisely identify households. For the 2013 round, we made an effort to incorporate additional household data, such as the number of household visits and individuals absent from households. However, this approach did not fully result in the desired uniqueness of the IDs, and the survey is left with a few duplicate IDs with each having unique individual characteristics.
+
+Also, in 2019, 2020 and 2021 rounds, we included the year as part of the household id to clarify that the pair of PSU and SSU only identifies the same household for a single year.  
+
 
 ### Geographic Information
 As of the time of writing (July 2023) Mongolia is composed of 21 administrative divisions, known as aimags, and the capital city, Ulaanbaatar. These were grouped into 5 regions:
