Update 1. Introduction to MNG LFS.md

--- a/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
+++ b/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
@@ -1,12 +1,11 @@
-- [Introduction to Mongolia Labor Force Survey (MNG LFS)](#introduction-to-mongolia-labor-force-survey-mng-lfs)
-    - [What is the MNG LFS?](#what-is-the-mng-lfs)
-    - [What does the MNG LFS cover?](#what-does-the-mng-lfs-cover)
-    - [Where can the data be found?](#where-can-the-data-be-found)
-    - [What is the sampling procedure?](#what-is-the-sampling-procedure)
-    - [What is the significance level?](#what-is-the-significance-level)
-    - [Other noteworthy aspects](#other-noteworthy-aspects)
-
 # Introduction to Mongolia Labor Force Survey (MNG LFS)
+
+- [What is the MNG LFS?](#what-is-the-mng-lfs)
+- [What does the MNG LFS cover?](#what-does-the-mng-lfs-cover)
+- [Where can the data be found?](#where-can-the-data-be-found)
+- [What is the sampling procedure?](#what-is-the-sampling-procedure)
+- [What is the significance level?](#what-is-the-significance-level)
+- [Other noteworthy aspects](#other-noteworthy-aspects)
 
 ## What is the MNG LFS?
 
@@ -44,7 +43,7 @@ It's worth noting that the expanded population using the survey weights does not
 
 ## Where can the data be found?
 
-The datasets are not accessible to the public and researchers have to request the data from the Mongolia National Statistics Office. The World Bank has been granted access to the datasets, if you work or are part of the World Bank Group, kindly contact the Jobs Group with a formal request for access to gld@worldbank.org
+The data are freely available (as of August 2023) on the dedicated LFS catalogue on the [microdata website of the National Statistics Office of Mongolia](http://web.nso.mn/nada/index.php/catalog/LFS/dataset)
 
 ## What is the sampling procedure?
 
@@ -54,7 +53,13 @@ Starting in 2019, the survey adopted a rotation sampling design where 75% of the
 
 ## What is the significance level?
 
-The official reports detail estimates by area of residence (urban or rural), and the regions (subnatid1) in Mongolia. The 2021 official report also detailed estimates by aimags or districts (subnatid2), and given similarities in the sampling design, it is possible that the data for the 2019 and 2020 LFS are representative at this level as well.
+The official reports detail estimates by area of residence (urban or rural), and the regions (GLD variable `subnatid1`) in Mongolia. The 2021 official report also detailed estimates by aimags or districts (GLD variable `subnatid2`), and given similarities in the sampling design, it is possible that the data for the 2019 and 2020 LFS are representative at this level as well. 
+
+**COMMENT**
+
+First, I could not see the report, may you please share it? In any case, a caveat comment may be good. Example:
+
+*However, it should be noted that the sample size has not increased. Any additional significance at lower level must thuse come from a more efficient sampling. The GLD could not verify how this was achieved.*
 
 ## Other noteworthy aspects
 
@@ -69,10 +74,9 @@ The GLD codes the harmonization’s `lstatus` variable based on the concept used
 ### Household ID
 The datasets provided in the GLD project initially lack ID information. To enhance the user experience, we've created identifiers using geographical references. The household ID is typically derived from data concerning the primary sampling unit and the household identification number. 
 
-However, during the 2011 and 2012 rounds, some exceptions required us to construct the household ID using the interview date and time, as the combination of PSU and SSU data didn't precisely identify households. For the 2013 round, we made an effort to incorporate additional household data, such as the number of household visits and individuals absent from households. However, this approach did not fully result in the desired uniqueness of the IDs, and the survey is left with a few duplicate IDs with each having unique individual characteristics.
+However, during the 2011 and 2012 rounds, some exceptions required us to construct the household ID using the interview date and time, as the combination of PSU and SSU data didn't precisely identify households. For the 2013 round, we made an effort to incorporate additional household data, such as the number of household visits and individuals absent from households. However, this approach did not fully result in the desired uniqueness of the IDs, and the survey is left with a few duplicate IDs with each having unique individual characteristics. The number of unique households thus identified in those years does not differ from previous or subsequent years.
 
-Also, in 2019, 2020 and 2021 rounds, we included the year as part of the household id to clarify that the pair of PSU and SSU only identifies the same household for a single year.  
-
+Additionally, once the rotation panel started in 2019, it became clear that the household IDs (and as a consquence most personal IDs since they are HHID plus in house running number) are being repeated over the years. This would wrongly create the impression that panels of households cross over the years when in fact the IDs are reused every calendar year and assigned to different households (e.g., household `299022020` is in surveys in 2019 and 2020 but these are in fact different households). Hence, since 2019 the year is included as part of the household ID to ensure the uniqueness of the households across years.  
 
 ### Geographic Information
 As of the time of writing (July 2023) Mongolia is composed of 21 administrative divisions, known as aimags, and the capital city, Ulaanbaatar. These were grouped into 5 regions:
@@ -87,7 +91,10 @@ As of the time of writing (July 2023) Mongolia is composed of 21 administrative 
 
 
 ### Employment: Industry Classification
-The Mongolia LFS questionnaires indicate the use of International Standards for Industrial Classification (ISIC) to identify industry of employment, but the exact ISIC version is not specified. We determine the ISIC version by looking at how often they match. From 2002 to 2006, the industry codes match most frequently with ISIC version 3.1, while the rounds from 2007 and onwards more often match with ISIC version 4. Beginning the 2011 round, the industry codes are left missing for individuals employed in animal husbandry. In such instances, we assign the relevant code corresponding to this specific economic activity. 
+The Mongolia LFS questionnaires indicate the use of International Standards for Industrial Classification (ISIC) to identify industry of employment, but the exact ISIC version is not specified. We determine the ISIC version by looking at the structure of the codes. As an example, ISIC 3.1 has codes starting with 01 and 02 for agriculture, 05 for fishing and then it skips to codes starting with 10 for mining and quarrying. In ISIC rev 4 agriculture and fishing has codes starting with 01 to 03, with mining and quarrying as codes 05 to 09. Hence codes 06 to 09 exit only in ISIC 4. There is a number of markers like this that allow us to identiy the version. In addition, we run an algorithm to see the number of matches within each revision (e.g., does code XYZX exists in ISIC revision #?). These result align with the code structure. From 2002 to 2006, the industry codes match most frequently with ISIC version 3.1, while the rounds from 2007 and onwards more often match with ISIC version 4. 
+
+Moreover, beginning the 2011 round, the questionnaire forces people with employment status of "employed in animal husbandry" and "unpaid family workers" to skip the question on industry codes (and, in fact, all subsequent questions like firm size or contract). For those in animal husbandry we can overwrite their industry code as `0140` (Agricultural and animal husbandry service activities, except veterinary
+activities). For unpaid family workers this cannot be done and may influence a bit the composition of the industry breakdown. Up to 2011 the majority of unpaid family workers were active in agriculture.
 
 ### Employment: Occupation Classification
 The Mongolia LFS questionnaires suggest that the use of International Standards for Classification of Occupations (ISCO) to identify occupations, but the exact ISCO version is not specified. We identify the ISCO version based on frequency of matches. From 2002 to 2010, the occupation codes most often align with ISCO 1988. However, from 2011 onwards, the codes correlate more closely with ISCO 2008. Some mismatches occur, found in an earlier ISCO version, and some codes do not fit any ISCO versions. This issue is present in all rounds that seem to use ISCO 2008 but is especially noticeable in the 2011 round. We believe this may be due to a transition period between the two ISCO versions. To address this, we have opted to use only the first two digits of the codes for this round.
