Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -1,4 +1,4 @@
-# Introduction to Sierra Leone national Labor Force Survey (LFS)
+# Introduction to Sierra Leone (SLE) national Labor Force Survey (LFS)
 
 - [What is the SLE LFS](#what-is-the-sle-lfs)
 - [What does the SLE LFS cover?](#what-does-the-sle-lfs-cover)
@@ -8,6 +8,8 @@
 - [Other noteworthy aspects](#other-noteworthy-aspects)
 
 ## What is the SLE LFS?
+
+The 2014 SLE LFS is the first labor force survey in the country since 1984. Before SLE LFS 2014, the 2004 and 2011 country integrated household survey were the main source of information on labor market and employment. SLE LFS 2014 was conducted by the Statistics Sierra Leone (SSL), with the support of the World Bank, the International Labor Organization, and the Deutsche Gesellschaft für Internationale Zusammenarbeit. The survey data was collected between July and August 2014 and is nationally representative. 
 
 
 ## What does the SLE LFS cover?
