--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -14,13 +14,17 @@ The 2014 SLE LFS is the first labor force survey in the country since 1984. Befo
 
 ## What does the SLE LFS cover?
 
+The SLE LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days and in the past year. In addition, the SLE LFS also includes information on migration. As we currently only have one year survey data, there is no way to compare the depth and richness in information between years. However, SLE LFS covers 25,645 individuals, 4,199 households randomly selected from a stratified cluster sample with oversampling urban areas. At strata level, it covers 280 enumeration areas in 20 districts/cities.    
+
+Below is a table showing districts and cities in the report vs. in the data:
+
 | **District Name**	| **In the Report?**	| **# EA in the Report**	| **In the Data?**	| **# EA in the Data**	|**Note**|
 | :---------------:	| :---------------:		| :------------------:	 	| :--------------:	| :------------------:	|:----:| 
 | Kailahun District | YES | 14 | YES | 14 |NA|
 | Kenema City       | YES | 14 | YES | 28 | Kenema city and district are combined as one in the data.|
 | Kenema District   | YES | 14 | YES | -  | See Kenama City. | 
-| Koidu/New Sembehun City | YES | 14 | NO | NA | NA |
-| Kono District     | YES | 14 | YES | 28 | (Suspecting this is a combo of Kono and Koidu.)|
+| Koidu/New Sembehun City | YES | 14 | NO | NA | See Kono district. |
+| Kono District     | YES | 14 | YES | 28 | Koido and Kono are combined as one in the data.|
 | Makeni City       | YES | 10 | NO  | NA | NA |
 | Bombali District  | YES | 12 | YES | 22 | NA |
 | Kambia District   | YES | 12 | YES | 13 | NA |
@@ -33,7 +37,7 @@ The 2014 SLE LFS is the first labor force survey in the country since 1984. Befo
 | Bonthe District   | YES | 12 | YES | -  | See Bonthe Mnucipality. |
 | Moyamba District  | YES | 12 | YES | 12 | NA |
 | Pujehun District  | YES | 12 | YES | 12 | NA |
-| Freetown City     | YES | 50 | YES | 51 | It is called Western Urban in the data.|
+| Freetown City     | YES | 50 | YES | 51 | Called "Western Urban" in the data.|
 |Western Rural District| YES | 20 | YES | 21 | NA |
 
 ## Where can the data be found?
