Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -1,3 +1,4 @@
+
 # Introduction to Sierra Leone (SLE) national Labor Force Survey (LFS)
 
 - [What is the SLE LFS](#what-is-the-sle-lfs)
@@ -42,6 +43,7 @@ Below is a table showing districts and cities in the report vs. in the data:
 
 ## Where can the data be found?
 
+The Microdata is freely available on the public [World Bank microdata library](https://microdata.worldbank.org/index.php/catalog/2687). The data and relevant documents are availabel from the [SSL website](http://www.statistics.sl/index.php/what-we-offer/open-data-free-datasets.html). 
 
 ## What is the sampling procedure?
 
