Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -15,7 +15,7 @@ The 2014 SLE LFS is the first labor force survey in the country since 1984. Befo
 
 ## What does the SLE LFS cover?
 
-The SLE LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days and in the past year. In addition, the SLE LFS also includes information on migration. As we currently only have one year survey data, there is no way to compare the depth and richness in information between years. However, SLE LFS covers 25,645 individuals, 4,199 households randomly selected from a stratified cluster sample with oversampling urban areas. At strata level, it covers 280 enumeration areas in 20 districts/cities.    
+The SLE LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days and in the past year. In addition, the SLE LFS also includes information on migration. As we currently only have one year survey data, there is no way to compare the depth and richness in information between years. However, SLE LFS covers 25,645 individuals, 4,199 households randomly selected from a stratified cluster sample with oversampling urban areas. At strata level, it covers 280 enumeration areas in 19 districts/cities plus Western region as a whole.    
 
 Below is a table showing districts and cities in the report vs. in the data:
 
@@ -47,6 +47,11 @@ The Microdata is freely available on the public [World Bank microdata library](h
 
 ## What is the sampling procedure?
 
+The survey uses a two-stage cluster sampling methodology on a sstratified cluster sample with oversampling in urban areas for non-response. 280 enumeration areas are selected from four regions which contain 19 districts or cities plus Western region as a whole, with 15 households randomly selected in each for a total 4,200 (4,199 in the data eventually) households as planned. SSL conducted the sampling using the 2004 Population and Housing Census as the sampling frame. The sample size was calculated using the formula below:
+
+![formula](utilities/sampling_formula)
+
+(*NOTE:The target number of households in the sample, i.e. the sample size, was thus estimated at 4,200, based on the computed value of 4296 rounded down to 4200 for ease of use and due to budget constraints.*)
 
 ## What is the geographic significance level?
 
