Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -49,7 +49,7 @@ The Microdata is freely available on the public [World Bank microdata library](h
 
 The survey uses a two-stage cluster sampling methodology on a sstratified cluster sample with oversampling in urban areas for non-response. 280 enumeration areas are selected from four regions which contain 19 districts or cities plus Western region as a whole, with 15 households randomly selected in each for a total 4,200 (4,199 in the data eventually) households as planned. SSL conducted the sampling using the 2004 Population and Housing Census as the sampling frame. The sample size was calculated using the formula below:
 
-![formula](utilities/sampling_formula)
+![formula](utilities/sampling_formula.png)
 
 (*NOTE:The target number of households in the sample, i.e. the sample size, was thus estimated at 4,200, based on the computed value of 4296 rounded down to 4200 for ease of use and due to budget constraints.*)
 
