Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -55,5 +55,6 @@ The survey uses a two-stage cluster sampling methodology on a sstratified cluste
 
 ## What is the geographic significance level?
 
+It is designed to be representative of district populations.
 
 ## Other noteworthy aspects  
