Update 1. Introduction to MNG LFS.md

--- a/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
+++ b/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
@@ -53,13 +53,8 @@ Starting in 2019, the survey adopted a rotation sampling design where 75% of the
 
 ## What is the significance level?
 
-The official reports detail estimates by area of residence (urban or rural), and the regions (GLD variable `subnatid1`) in Mongolia. The 2021 official report also detailed estimates by aimags or districts (GLD variable `subnatid2`), and given similarities in the sampling design, it is possible that the data for the 2019 and 2020 LFS are representative at this level as well. 
+The official reports detail estimates by area of residence (urban or rural), and the regions (GLD variable `subnatid1`) in Mongolia. The [2019 official report]("Utilities/1.%20report_LFS_eng.pdf") also detailed estimates by provinces (GLD variable `subnatid2`), and given similarities in the sampling design, it is possible that the data for the 2019 and 2020 LFS are representative at this level as well. However, it should be noted that the sample size has not increased. Any additional significance at lower level must have come from a more efficient sampling. The GLD could not verify how this was achieved. 
 
-**COMMENT**
-
-First, I could not see the report, may you please share it? In any case, a caveat comment may be good. Example:
-
-*However, it should be noted that the sample size has not increased. Any additional significance at lower level must thuse come from a more efficient sampling. The GLD could not verify how this was achieved.*
 
 ## Other noteworthy aspects
 
@@ -91,13 +86,18 @@ As of the time of writing (July 2023) Mongolia is composed of 21 administrative 
 
 
 ### Employment: Industry Classification
-The Mongolia LFS questionnaires indicate the use of International Standards for Industrial Classification (ISIC) to identify industry of employment, but the exact ISIC version is not specified. We determine the ISIC version by looking at the structure of the codes. As an example, ISIC 3.1 has codes starting with 01 and 02 for agriculture, 05 for fishing and then it skips to codes starting with 10 for mining and quarrying. In ISIC rev 4 agriculture and fishing has codes starting with 01 to 03, with mining and quarrying as codes 05 to 09. Hence codes 06 to 09 exit only in ISIC 4. There is a number of markers like this that allow us to identiy the version. In addition, we run an algorithm to see the number of matches within each revision (e.g., does code XYZX exists in ISIC revision #?). These result align with the code structure. From 2002 to 2006, the industry codes match most frequently with ISIC version 3.1, while the rounds from 2007 and onwards more often match with ISIC version 4. 
+The Mongolia LFS questionnaires indicate the use of International Standards for Industrial Classification (ISIC) to identify industry of employment, but the exact ISIC version is not specified. We determine the ISIC version by looking at the structure of the codes. As an example, ISIC 3.1 has codes starting with 01 and 02 for agriculture, 05 for fishing and then it skips to codes starting with 10 for mining and quarrying. In ISIC rev 4 agriculture and fishing has codes starting with 01 to 03, with mining and quarrying as codes 05 to 09. Hence codes 06 to 09 exist only in ISIC 4. There is a number of markers like this that allow us to identiy the version. In addition, we run an algorithm to see the number of mismatches at the 2- and 4- digits for each revision (e.g., does code XYZX exists in ISIC revision #?) and plot this over time to identify potential breaks (see below). These result align with the code structure. From 2002 to 2006, the industry codes match most frequently with ISIC version 3.1, while the rounds from 2007 and onwards more often match with ISIC version 4. 
+
+<img src="Utilities/isic_4d.png" width="480"/> <img src="Utilities/isic_2d.png" width="480"/> 
 
 Moreover, beginning the 2011 round, the questionnaire forces people with employment status of "employed in animal husbandry" and "unpaid family workers" to skip the question on industry codes (and, in fact, all subsequent questions like firm size or contract). For those in animal husbandry we can overwrite their industry code as `0140` (Agricultural and animal husbandry service activities, except veterinary
 activities). For unpaid family workers this cannot be done and may influence a bit the composition of the industry breakdown. Up to 2011 the majority of unpaid family workers were active in agriculture.
 
 ### Employment: Occupation Classification
-The Mongolia LFS questionnaires suggest that the use of International Standards for Classification of Occupations (ISCO) to identify occupations, but the exact ISCO version is not specified. We identify the ISCO version based on frequency of matches. From 2002 to 2010, the occupation codes most often align with ISCO 1988. However, from 2011 onwards, the codes correlate more closely with ISCO 2008. Some mismatches occur, found in an earlier ISCO version, and some codes do not fit any ISCO versions. This issue is present in all rounds that seem to use ISCO 2008 but is especially noticeable in the 2011 round. We believe this may be due to a transition period between the two ISCO versions. To address this, we have opted to use only the first two digits of the codes for this round.
+The Mongolia LFS questionnaires suggest that the use of International Standards for Classification of Occupations (ISCO) to identify occupations, but the exact ISCO version is not specified. We identify the ISCO version based on the least number of mismatches. As suggested by the plot below, from 2002 to 2010, the occupation codes most often align with ISCO 1988. However, from 2011 onwards, the codes correlate more closely with ISCO 2008. Some mismatches occur, found in an earlier ISCO version, and some codes do not fit any ISCO versions. This issue is present in all rounds that seem to use ISCO 2008 but is especially noticeable in the 2011 round. We believe this may be due to a transition period between the two ISCO versions. To address this, we have opted to use only the first two digits of the codes for this round.
+
+<img src="Utilities/isco_4d.png" width="480"/> <img src="Utilities/isco_2d.png" width="480"/> 
+
 
 ### Mappings between raw and harmonized variables
 The mappings between the raw and harmonized variables can be found [here](Utilities/mappings_year_data.xls) for the following categorical variables: education, employment status, marital status, reasons for migration, reasons for non-participation in the labor force, sector of occupation, and relationship to household head.
