Update and rename 1. Introduction to LFS.md to 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/ECE/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/ECE/1. Introduction to ECE.md
@@ -1,18 +1,18 @@
-Introduction to the BOLIVIAN CONTINUOUS EMPLOYMENT SURVEY (LFS) 
+Introduction to the BOLIVIAN CONTINUOUS EMPLOYMENT SURVEY (ECE) 
 ================
 
-- [What is the BOL LFS?](#what-is-the-bol-lfs)
-- [What does the BOL LFS cover?](#what-does-the-bol-lfs-cover)
+- [What is the BOL ECE?](#what-is-the-bol-lfs)
+- [What does the BOL ECE cover?](#what-does-the-bol-lfs-cover)
 - [Where can the data be found?](#where-can-the-data-be-found)
 - [What is the sampling procedure?](#what-is-the-sampling-procedure)
 - [What is the geographic significance level?](#what-is-the-geographic-significance-level)
 - [Other noteworthy aspects](#other-noteworthy-aspects)
 
-## What is the CHL CASEN?
+## What is the BOL ECE?
 
-The Encuesta de **Ca**racterización **S**ocio**e**conomica **N**acional (CASEN - National Socioeconomic Characterisation Survey) is a Chilean household survey that contains sections for employment, education, dwellinga and income. The CASEN has been rolling since 1987. The GLD harmonization starts with 1990 a this is the first year wth public data (see section on where the data can be found below).  
+The Bolivian continuous employment survey is a survey 
 
-## What does the CHL CASEN cover?
+## What does the BOL ECE cover?
 
 The CHL CASEN includes one labour section that collects information on employment situations of individuals surveyed. It further provides insights in the reasons for taking or not taking a job and the salary situation of the participant. In addition, other sections of CASEN cover demographic details (age, sex, location), education (academic), social security, labour market activities over the past week, as well as working hours and type of economic activities engaged. The years and sample size of CASEN harmonized for GLD are:
 
