Update 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -43,6 +43,24 @@ The results are significant at national, rural, urban levels. The departments co
 ### ISIC codes
 The GLD data provides ISIC data to four digits. According to the INE, the industry survey data is like the international ISIC rev. 4. The resemblance but is only comparable to the 4th digit.  If the user compares the “orig” variable to the “isic” variable, they will notice that the latter contains five digits. After checking that the four digits follow the ISIC rev.4, we created the “industrycat_isic” variable. The same explanation applies to the respective second job variable.
 
+
+<br></br>
+![ISIC_codes](utilities/isicorig.png)
+<br></br>
+
+<br></br>
+![ISIC_codes](utilities/isic.png)
+<br></br>
+
 ### ISCO codes
 The survey uses the occupation classification from Bolivia (COB 2009). The COB 2009 is a version of ISCO-08 for Bolivia with five digits. Compared to ISIC, the resemblance is not always straighforward in this case. As a result, the team mapped the ISCO-08 codes to the COB version, the outcome can be found in this [link]() in an excel file. However, the do files also contain the mapping for each year. The same explanation applies for the respective second job variable.   
+
+
+<br></br>
+![ISCO_codes](utilities/iscoorig.png)
+<br></br>
+
+<br></br>
+![ISCO_codes](utilities/isco.png)
+<br></br>
 
