Update 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -45,11 +45,11 @@ The GLD data provides ISIC data to four digits. According to the INE, the indust
 
 
 <br></br>
-![ISIC_codes](utilities/isicorig.png)
+![ISIC_codes](utilities/isicorig.PNG)
 <br></br>
 
 <br></br>
-![ISIC_codes](utilities/isic.png)
+![ISIC_codes](utilities/isic.PNG)
 <br></br>
 
 ### ISCO codes
@@ -57,10 +57,10 @@ The survey uses the occupation classification from Bolivia (COB 2009). The COB 2
 
 
 <br></br>
-![ISCO_codes](utilities/iscoorig.png)
+![ISCO_codes](utilities/iscoorig.PNG)
 <br></br>
 
 <br></br>
-![ISCO_codes](utilities/isco.png)
+![ISCO_codes](utilities/isco.PNG)
 <br></br>
 
