Update 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -53,7 +53,7 @@ The GLD data provides ISIC data to four digits. According to the INE, the indust
 <br></br>
 
 ### ISCO codes
-The survey uses the occupation classification from Bolivia (COB 2009). The COB 2009 is a version of ISCO-08 for Bolivia with five digits. Compared to ISIC, the resemblance is not always straighforward in this case. As a result, the team mapped the ISCO-08 codes to the COB version, the outcome can be found in this [link]() in an excel file. However, the do files also contain the mapping for each year. The same explanation applies for the respective second job variable.   
+The survey uses the occupation classification from Bolivia (COB 2009). The COB 2009 is a version of ISCO-08 for Bolivia with five digits. Compared to ISIC, the resemblance is not always straighforward in this case. As a result, the team mapped the ISCO-08 codes to the COB version, the outcome can be found in this [link](utilities/Classification_ISCO_COB.xls) in an excel file. However, the do files also contain the mapping for each year. The same explanation applies for the respective second job variable.   
 
 
 <br></br>
