Update 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -1,4 +1,4 @@
-Introduction to the BOLIVIAN CONTINUOUS EMPLOYMENT SURVEY (ECE) 
+Introduction to the Bolivian Continuous Employment Survey (ECE) 
 ================
 
 - [What is the BOL ECE?](#what-is-the-bol-ece)
