Update 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -32,7 +32,7 @@ The microdata is free and publicly available on the [INE website](https://www.in
 
 ## What is the sampling procedure?
 
-The sampling procedure is two stage probabilistic, stratified, by conglomerate. In the first step, the NSO selects the unite of probabilitic measure (UPM), the selection process is proportional to the number of households in the UPM. The second step is to select the households inside the selected UPM, the selection process is aleatory and systematic. 
+The sampling procedure is two stage probabilistic, stratified, by conglomerate. In the first step, the NSO selects the probabilitic measure unit (UPM), the selection process is proportional to the number of households in the UPM. The second step is to select the households inside the selected UPM, the selection process is aleatory and systematic. 
 
 ## What is the geographic significance level?
 
@@ -41,7 +41,7 @@ The results are significant at national, rural, urban levels. The departments co
 ## Other Noteworthy Aspects 
 
 ### ISIC codes
-The GLD data provides ISIC data to four digits. According to the INE, the industry survey data is like the international ISIC rev. 4. The resemblance but is only comparable to the 4th digit.  If the user compares the “orig” variable to the “isic” variable, they will notice that the latter contains five digits. After checking that the four digits follow the ISIC rev.4, we created the “industrycat_isic” variable. The same explanation applies to the respective second job variable.
+The GLD data provides ISIC data to four digits. According to the INE, the industry survey data is similar to the international ISIC rev. 4. However, it is only comparable to the 4th digit.  If the user compares the “orig” variable to the “isic” variable, they will notice that the latter contains five digits. After checking that the four digits follow the ISIC rev.4, we created the “industrycat_isic” variable. The same explanation applies to the respective second job variable.
 
 
 <br></br>
