Update 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -24,7 +24,8 @@ The ECE covers national, urban and rural data from nine "departmentos" (subnatio
 | 2018	    | 39,830          | 245,041	          
 | 2019	    | 40,119          | 228,619           |
 | 2021	    | 39,901          | 220,667	          
-* Only Q4 data is available
+
+\* Only Q4 data is available
   
 ## Where can the data be found?
 
@@ -41,16 +42,18 @@ The results are significant at national, rural, urban levels. The departments co
 ## Other Noteworthy Aspects 
 
 ### ISIC codes
-The GLD data provides ISIC data to four digits. According to the INE, the industry survey data is similar to the international ISIC rev. 4. However, it is only comparable to the 4th digit.  If the user compares the “orig” variable to the “isic” variable, they will notice that the latter contains five digits. After checking that the four digits follow the ISIC rev.4, we created the “industrycat_isic” variable. The same explanation applies to the respective second job variable.
+The GLD data provides ISIC data to four digits. 
+
+According to the INE, their national industry classification is comparable to ISIC rev. 4. to the 3th digit.  The Bolivian industry classification has 5 digits. After checking that the third digits follow the ISIC rev.4 , we created a variable “industrycat_isic” variable with a 0 at the end. The same explanation applies to the respective second job variable.
+
+
 
 
 <br></br>
-![ISIC_codes](utilities/isicorig.PNG)
+![ISIC_codes]()
 <br></br>
 
-<br></br>
-![ISIC_codes](utilities/isic.PNG)
-<br></br>
+
 
 ### ISCO codes
 The survey uses the occupation classification from Bolivia (COB 2009). The COB 2009 is a version of ISCO-08 for Bolivia with five digits. Compared to ISIC, the resemblance is not always straighforward in this case. As a result, the team mapped the ISCO-08 codes to the COB version, the outcome can be found in this [link](utilities/Classification_ISCO_COB.xlsx) in an excel file. However, the do files also contain the mapping for each year. The same explanation applies for the respective second job variable.   
