Update 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -50,7 +50,7 @@ According to the INE, their national industry classification is comparable to IS
 
 
 <br></br>
-![ISIC_codes]()
+![ISIC_codes](utilities/caeb.PNG)
 <br></br>
 
 
