Update 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -42,12 +42,9 @@ The results are significant at national, rural, urban levels. The departments co
 ## Other Noteworthy Aspects 
 
 ### ISIC codes
-The GLD data provides ISIC data to four digits. 
+According to the INE, the Bolivian national industry classification maintains the code structure of ISIC Rev. 4 up to the third level of disaggregation. The fourth level, which INE calls  "Class category", is a modified version of ISIC and the fifth level corresponds to a "Subclass" created by the INE to ressemble statistical needs of the country (see the image below).
 
-According to the INE, their national industry classification is comparable to ISIC rev. 4. to the 3th digit.  The Bolivian industry classification has 5 digits. After checking that the third digits follow the ISIC rev.4 , we created a variable “industrycat_isic” variable with a 0 at the end. The same explanation applies to the respective second job variable.
-
-
-
+In the harmonization, the variable industrycate_isic file contains 4 digits. Following the description from INE, the GLD harmonization followed the industry structure up to the third level of dissagregation. The final digit is a 0 in all cases for completeness. 
 
 <br></br>
 ![ISIC_codes](utilities/caeb.PNG)
